better mvn opts to support big repositories (#504)
GitOrigin-RevId: 64fcf7a3b92ffc5fa93fe28abbb3c11c9e4c3b3d